sections.css
.navigation-bar
{
    margin: 1em;
    color: white;
    text-decoration: none;
    text-transform: uppercase;
    font-family: 'Montserrat', sans-serif;
    font-weight: bold;
    justify-content: flex-end;
}

.header-navigation .icon
{
    color: white;
    display: none;
}

.header-navigation
{
    position: absolute;
    right: 20px;
    top: 5%
}

/* development div stack elements */
@media screen and (max-width: 750px)
{
    .gray-web
    {
        float: none !important;
        width: auto !important;
    }


    .gray-app
    {
        width: auto !important;
        float: none !important;
    }

    .gray-other
    {
        float: none !important;
        width: auto !important;
    }
}

@media screen and (max-width: 600px)
{
    .header-navigation a
    {
        display: none;
    }
    .header-navigation a.icon
    {
        position: relative;
        float: right;
        display: block;
        top: 16px;
    }
}
@media screen and (max-width: 600px)
{
    .header-navigation.responsive
    {
        position: relative;
    }
    .header-navigation.responsive .icon
    {
        display: block;
        position: absolute;
        right: 0;
        top: 0;
    }
    .header-navigation.responsive a
    {
        float: none;
        display: block;
        text-align: left;
        margin-left: 50px;
    }
}
/* adjust title size for skinny devices */
@media screen and (max-width: 415px)
{
    .content
    {
        font-size: 35px !important;
    }
}
.hero-image
{
    overflow: hidden;
    min-height: 937px;
    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
    background-image: linear-gradient(rgba(0, 0, 0, 0) 50%, rgba(0,0,0,0), rgba(0, 0, 0, 1) ), linear-gradient(to left, rgba(0, 0, 0, 0) 50%, rgba(0,0,0,0), rgba(0, 0, 0, 1) ), url("https://artelogic.net/uploads/mce/1539000190.jpg");
    /* Set a specific height */
    height: 100%;

    /* Position and center the image to scale nicely on all screens */
    background-position: center;
    background-repeat: no-repeat;
    background-size: 1600px;
    position: relative;
}

#hello-text
{
    width: 100%;
    text-align: center;
    position: absolute;
    margin-top: 0px;
    color: white;
}
.hero-text
{
    top: 180px;
    text-align: center;
    position: absolute;
    width: 100%;
}



/* Place text in the middle of the image */
.content
{
    width: 100%;
    float: left;
    clear: both;
    text-align: center;
    position: absolute;
    left: 50%;
    margin-top: 160px;
    transform: translate(-50%, -50%);
    color: white;
    overflow: hidden;
    height: 220px;
    font-size: 50px;
    line-height: 50px;
}


.content__container
{
    width: 100%;
    overflow: hidden;
    height: 50px;
    padding: 0 0px; 
}

.content__container__list {
    width: 100%;
    margin-top: 0px;
    padding-left: 0px;
    text-align: left;
    list-style: none;
    
    -webkit-animation-name: change;
    -webkit-animation-duration: 10s;
    -webkit-animation-iteration-count: infinite;
}

.content__container__list__item {
    text-align: center;
    line-height: 55px;
    margin: 0;
    width: 100%;
}

@-webkit-keyframes change {
  0%, 8.5%, 100% {transform:translate3d(0,0,0);}
  12.5%, 21% {transform:translate3d(0,-20%,0);}
  25%,33.5% {transform:translate3d(0,-40%,0);}
  37.5%,46% {transform:translate3d(0,-60%,0);}
  50%,58.5% {transform:translate3d(0,-80%,0);}
  62.5%,71% {transform:translate3d(0,-60%,0);}
  75%,83.5% {transform:translate3d(0,-40%,0);}
  87.5%,96% {transform:translate3d(0,-20%,0);}
}

 /* 6 is the number of animation.
 Here, there are 4 lines :

 1 to 2
 2 to 3
 3 to 4
 4 to 3
 3 to 2
 2 to 1

 6x + 6y = 100 (100% duration)

 HERE : 
 y = 4 -> Animation between two lines
 x = 12.66 -> Time spent on a line

 You can define a value and calculate the other if you want change speed or the number of lines */




.gray
{
    width: 100%;
    clear: both;
    float: left;
    background-color: rgb(230, 230, 230);
    color: black;
    position: relative;
    
    
    /* Set a specific height */
    height: auto;

    /* Position and center the image to scale nicely on all screens */

    overflow: hidden;
}



.gray-text
{
    
    text-align: center;
    color: black;
}



.white
{
    width: 100%;
    clear: both;
    float: left;
    
    background-color: rgb(255, 255, 255);
    color: black;
    /* Set a specific height */

    height: auto;
    /* Position and center the image to scale nicely on all screens */
    position: relative;
    overflow: hidden;
}

.white-text
{
    margin-top: 120px;
    margin-bottom: 120px;
    width: auto;
    margin-left: 15%;
    margin-right: 15%;
    text-align: center;
    color: black;
}


.black
{
    width: 100%;
    clear: both;
    float: left;
    background-color: black;
    color: black;
    position: relative;
    
    
    /* Set a specific height */
    height: auto;

    /* Position and center the image to scale nicely on all screens */

    overflow: hidden;
}

h2
{
    font-size: 50px;
    font-family: 'Oswald', sans-serif;
    font-weight: lighter;
}
p
{
    font-family: 'Abel', sans-serif;
    font-size: 25px;
    font-weight: lighter;
}

.black-text
{
    width: 100%;
    margin-top: 60px;
    margin-bottom: 60px;
    text-align: center;
    color: white;
}
.black a
{
    color: gray;
}

.gray-web
{
    margin-right: 2%;
    margin-left: 2%;
    float: left;
    width: 29%;
}


.gray-app
{
    width: 29%;
    float:left;

    margin-left: 2%;
    margin-right: 2%;
}

.gray-other
{
    float: left;
    width: 29%;
    margin-right: 2%;
    margin-left: 2%;
    margin-bottom: 150px;
}

.gray-text
{
    margin-top: 120px;
    margin-bottom: 120px;
    width: auto;
}

.gray-text h4
{
    font-weight: normal;
    font-size: 25px;
}

#webdev p
{
    font-size: 1.4em;
}

